Done, but slight bug on about.html. Navbar is not collapsing. Someone wither better bootstrap skills look into this.

--- a/static/bootstrap/css/container.css
+++ b/static/bootstrap/css/container.css
@@ -1,6 +1,6 @@
 
 body {
-  padding-top: 70px;
+  padding-top: 50px;
   padding-bottom: 30px;
 }
 
